manifests/navidrome/base/manifest.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: navidrome
  labels:
    app: navidrome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: navidrome
          image: deluan/navidrome:latest
          ports:
            - name: http
              containerPort: 4533
          volumeMounts:
            - name: data-volume
              mountPath: /data
            - name: music-volume
              mountPath: /music/organized
              subPath: organized
              readOnly: true
          resources: {}
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: pvc-iscsi-navidrome-config
        - name: music-volume
          persistentVolumeClaim:
            claimName: pvc-nfs-navidrome-music

---
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  labels:
    app: navidrome
spec:
  selector:
    app: navidrome
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: navidrome-private
  labels:
    app: navidrome
spec:
  ingressClassName: nginx-private
  rules:
    - host: music.lan.stamx.nl
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: navidrome
                port:
                  name: http
  tls:
    - hosts:
        - music.lan.stamx.nl
      secretName: tls-wildcard-lan-stamx-nl

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: navidrome-public
  labels:
    app: navidrome
spec:
  ingressClassName: nginx-public
  rules:
    - host: music.stamx.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: navidrome
                port:
                  name: http
  tls:
    - hosts:
        - music.stamx.nl
      secretName: tls-wildcard-stamx-nl
